# nvidia-codec-sdk

Samples/: CMakeLists.txt
Samples/AppDecode/AppDec/: AppDec.cpp  CMakeLists.txt
Samples/AppDecode/AppDecD3D/: AppDecD3D.cpp  CMakeLists.txt  FramePresenterD3D.h  FramePresenterD3D11.h  FramePresenterD3D9.h
Samples/AppDecode/AppDecGL/: AppDecGL.cpp  CMakeLists.txt  FramePresenter.h  FramePresenterGLUT.h  FramePresenterGLX.cpp  FramePresenterGLX.h
Samples/AppDecode/AppDecImageProvider/: AppDecImageProvider.cpp  CMakeLists.txt
Samples/AppDecode/AppDecLowLatency/: AppDecLowLatency.cpp  CMakeLists.txt
Samples/AppDecode/AppDecMem/: AppDecMem.cpp  CMakeLists.txt
Samples/AppDecode/AppDecMultiFiles/: AppDecMultiFiles.cpp  CMakeLists.txt
Samples/AppDecode/AppDecMultiInput/: AppDecMultiInput.cpp  CMakeLists.txt  Image.cu
Samples/AppDecode/AppDecPerf/: AppDecPerf.cpp  CMakeLists.txt
Samples/AppDecode/Common/: AppDecUtils.h
Samples/AppEncode/AppEncCuda/: AppEncCuda.cpp  CMakeLists.txt
Samples/AppEncode/AppEncD3D11/: AppEncD3D11.cpp  CMakeLists.txt
Samples/AppEncode/AppEncD3D12/: AppEncD3D12.cpp  CMakeLists.txt
Samples/AppEncode/AppEncD3D9/: AppEncD3D9.cpp  CMakeLists.txt
Samples/AppEncode/AppEncDec/: AppEncDec.cpp  CMakeLists.txt
Samples/AppEncode/AppEncGL/: AppEncGL.cpp  CMakeLists.txt  GraphicsUtils.cpp  GraphicsUtils.h
Samples/AppEncode/AppEncLowLatency/: AppEncLowLatency.cpp  CMakeLists.txt
Samples/AppEncode/AppEncME/: AppEncME.cpp  CMakeLists.txt
Samples/AppEncode/AppEncPerf/: AppEncPerf.cpp  CMakeLists.txt
Samples/AppEncode/AppEncQual/: AppEncQual.cpp  CMakeLists.txt  PSNR.h
Samples/AppEncode/AppMotionEstimationVkCuda/: AppMotionEstimationVkCuda.cpp  CMakeLists.txt  NvEnc.cpp  NvEnc.h  utility.cpp  utility.h
Samples/AppEncode/Common/: AppEncUtils.h  AppEncUtilsD3D11.h
Samples/AppTranscode/AppTrans/: AppTrans.cpp  CMakeLists.txt
Samples/AppTranscode/AppTransOneToN/: AppTransOneToN.cpp  CMakeLists.txt
Samples/AppTranscode/AppTransPerf/: AppTransPerf.cpp  CMakeLists.txt
Samples/Utils/: BitDepth.cu  FFmpegDemuxer.h  FFmpegStreamer.h  crc.cu
